--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>JS Crash Course</title>
 </head>
 <body>
-    
+    <header>
+        <h1>JS Crash Course</h1>
+    </header>
+<script src="main.js"></script>
 </body>
 </html>
